tests/invalid/ann_assign_type_mismatch/main.py
def run_case() -> None:
    value: int = "not-int"


if __name__ == "__main__":
    run_case()
